webapi.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
  namespace: release-sphere-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: webapi
          image: ghcr.io/srikanthmatheesh/releasesphere-services-api:latest
          ports:
          - containerPort: 80
            name: webapi-port
      #     volumeMounts:
      #     - name: webapi-data-volume
      #       mountPath: /app
      #       subPath: webapi
      # volumes:
      # - name: webapi-data-volume
      #   persistentVolumeClaim:
      #     claimName: release-sphere-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
  namespace: release-sphere-services
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: webapi-port
  selector:
    app: webapi
